# workflow-osx

./: .gitignore  Main.hs  Makefile  README.md  stack.yaml  workflow-osx.cabal
ObjC-SpeechRecognition/: .gitignore  README.md
ObjC-SpeechRecognition/SpeechRecognition/: Recognizer.m  main.m
ObjC-SpeechRecognition/SpeechRecognition.xcodeproj/xcuserdata/michaelboosalis.xcuserdatad/xcschemes/: xcschememanagement.plist
SpeechRecognition/: Recognizer.h  Recognizer.m  VRecognizer.h  VRecognizer.m  main.m
SpeechRecognition.xcodeproj/: project.pbxproj
SpeechRecognition.xcodeproj/xcuserdata/michaelboosalis.xcuserdatad/xcschemes/: SpeechRecognition.xcscheme
cbits/: Makefile  main.m  objc_actor.m  objc_workflow.h  objc_workflow.m
executables/Workflow/OSX/: CommandLine.hs
native/: main.m  workflow.h  workflow.m
sources/Workflow/: OSX.hs
sources/Workflow/OSX/: Bindings.hs  Constants.hs  DSL.hs  Example.hs  Execute.hs  Extra.hs  Foreign.hs  Marshall.hs  Screenshot.hs  Types.hs
sources/Workflow/OSX/Bindings/: Raw.hs
workflow-osx/: LICENSE  README.md  stack.yaml  workflow-osx.cabal
workflow-osx-ffi/: .gitignore  README.md  run.sh  stack.yaml  workflow-osx-ffi.cabal
workflow-osx-ffi/benchmarks/: Bench.hs
workflow-osx-ffi/executables/: Main.hs
workflow-osx-ffi/native/: Makefile  workflow.m
workflow-osx-ffi/sources/Workflow/: OSX.hs
workflow-osx-ffi/sources/Workflow/OSX/: C.hs  Core.hs  Example.hs  Extra.hs  Types.hs
workflow-osx-ffi/sources/Workflow/OSX/C/: Bindings.hs  Constants.hs  Example.hs  Extra.hs  Foreign.hs  Types.hs
workflow-osx-ffi/tests/: DocTest.hs
workflow-osx-ffi/tests/Workflow/OSX/: Test.hs
workflow-osx/sources/Workflow/: OSX.hs
workflow-osx/sources/Workflow/OSX/: Bindings.hs  DSL.hs  Foreign.hs  Screenshot.hs  Types.hs
