name:                workflow-osx-ffi
version:             0.0.0
synopsis:            TODO
description:         
 .
 TODO
 . 
 see the source of "Workflow.OSX.Example" for an example.
 .
 transitive dependencies:
 .
 <<.png>>

homepage:            http://github.com/sboosali/workflow-osx-ffi#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2017 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/workflow-osx-ffi


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  # disable
  -fno-warn-unticked-promoted-constructors
  # enable
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fwarn-missing-fields

 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
                 Workflow.OSX.C
                 Workflow.OSX.C.Types
                 Workflow.OSX.C.Bindings	 
                 Workflow.OSX.C.Constants		 
                 Workflow.OSX.C.Foreign	 
-- other-modules:
                 Workflow.OSX.C.Example
                 Workflow.OSX.C.Extra

 build-depends:
               base >=4.7 && <5
             , spiros
             , transformers


executable example-workflow-osx-ffi
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , workflow-osx-ffi

